# obsidian-semantic-search

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml
data/: eval_queries.json
scripts/: evaluate.py
src/obsidian_search/: chunker.py  cli.py  config.py  embedder.py  indexer.py  parser.py  sync.py
