[project]
name = "obsidian-search"
version = "0.1.0"
description = "Semantic search over Obsidian vault notes — learning project covering chunking, embeddings, OpenSearch KNN and hybrid search"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-frontmatter>=1.1.0",
    "markdown-it-py>=3.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "structlog>=24.0.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "tiktoken>=0.7.0",
    "sentence-transformers>=3.0.0",
    "opensearch-py>=2.7.0",
    "numpy>=1.26.0",
]

[project.scripts]
obsidian-search = "obsidian_search.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/obsidian_search"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
]
